--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-InheritanceLab/.vs/*
-InheritanceLab/InheritanceLab/bin/*
-InheritanceLab/InheritanceLab/obj/*
+FactoryLab/.vs/*
+FactoryLab/FactoryLab/bin/*
+FactoryLab/FactoryLab/obj/*
